[package]
name = "distil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
derivative = "2.2.0"
graphviz-rust = "0.9.0"
petgraph = "0.6.4"
phf = "0.11.2"
serde_json = "1.0.108"
sqlparser = { path = "./sqlparser-rs"}
